--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,12 @@ jobs:
 
   tests:
     runs-on: ubuntu-latest
-    needs: changes
-    if: needs.changes.outputs.changes == 'true'
+    if: jobs.changes.outputs.changes == 'true'
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
